# crewai

./: .gitignore  Makefile  README.md  requirements.txt
ai_news/: report.md
ai_news/None/: news_article.md
ai_news/src/ai_news/: crew.py  main.py
ai_news/src/ai_news/config/: tasks.yaml
base/: CalculatorTool.py  main.py  main_ollama.py  math_explanation.md  tools-example.py
base/markdown/: math.md
code_execution_tool/: README.md  pyproject.toml
code_execution_tool/code/: Dijkstra_.py  breadth_first_search.py  bubble_sort_.py  bubble_sort_.python  result.py
code_execution_tool/src/code_execution_tool/: crew.py  main.py
code_execution_tool/src/code_execution_tool/config/: agents.yaml  tasks.yaml
meeting_minutes/: pyproject.toml
meeting_minutes/meeting_minutes/: action_items.txt  sentiment.txt  summary.txt
meeting_minutes/src/meeting_minutes/: main.py
meeting_minutes/src/meeting_minutes/crews/gmailcrew/: gmailcrew.py
meeting_minutes/src/meeting_minutes/crews/gmailcrew/tools/: gmail_tool.py
meeting_minutes/src/meeting_minutes/crews/meeting_minutes_crew/: meeting_minutes_crew.py
multicrewai/: README.md  pyproject.toml  report.md
multicrewai/src/master_crewai_course/: crew.py  main.py
pdf_rag/: .gitignore  report.md
pdf_rag/src/pdf_rag/: crew.py  main.py
pdf_rag/src/pdf_rag/config/: agents.yaml  tasks.yaml
starter_template/: .gitignore  agents.py  main.py  tasks.py
