[project]
name = "code_execution_tool"
version = "0.1.0"
description = "code_execution_tool using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
code_execution_tool = "code_execution_tool.main:run"
run_crew = "code_execution_tool.main:run"
train = "code_execution_tool.main:train"
replay = "code_execution_tool.main:replay"
test = "code_execution_tool.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
